--- a/intro.html
+++ b/intro.html
@@ -1,35 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entendendo CSS</title>
+    <link rel="stylesheet" href="assets\css\style.css">
 </head>
-<style>
-    /* 
-    comentario de bloco
-    */
-    h1 {
-        color: red;
-        font-size: 50px;
-        background: blue;
-    }
-    p{
-        color: green;
-        font-size: 20px;
-        background: yellow;
-    }
-</style>
+
 <body>
-    <h1>
-        Eu sou um titulo
-    </h1>
-    <h2>
-        Subtitulo
-    </h2>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ad voluptas et, at velit exercitationem odio quam sapiente officia vero! Id odit modi ratione natus neque vel velit tenetur delectus.
-    </p>
+    <!-- classificacao seletor do tipo class -->
+    <div class="container">
+        <h1>eu sou o titulo</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dicta amet necessitatibus. Excepturi temporibus laborum, cupiditate ex dolore commodi reiciendis assumenda pariatur aliquam iusto omnis vero adipisci, labore voluptate atque.
+        </p>
+
+    </div>
 </body>
+
 </html>
