--- a/fluxo.html
+++ b/fluxo.html
@@ -5,49 +5,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fluxo de Leitura e Especificidade
+    <title>at rules e combinators
     </title>
-
     <link rel="stylesheet" href="/assets/css/style.css">
-
-
-    <style>
-        h1 {
-            background: blue;
-        }
-
-        #super-title {
-            background-color: red;
-        }
-
-        h1 {
-            background: green;
-        }
-
-        .my-title-2 {
-            background: yellow;
-        }
-
-        strong {
-            color: blueviolet;
-        }
-        .my-text strong {
-            color: aqua;
-        }
-    </style>
 </head>
+<style>
+    /* descendent combinator */
+
+    /* body ul li {
+        background: green;
+        color: red;
+    }
+
+    body section div ul li {
+        background: blue;
+        color: yellow;
+    } */
+
+    /* child combinator */
+    /* body > ul{
+        background-color: red;
+    }
+    div > ul{
+        background-color: blue;
+    } */
+
+    /* adjacent combinator */
+    body{
+        background-color: antiquewhite;
+    }
+    h1 ~ p{
+        color:green;
+    }
+    h1 + p{
+        color:red;
+    }
+</style>
 
 <body>
-    <h1 id="super-title">testando especifidade</h1>
-    <p class="my-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore quisquam labore animi dolorum placeat
-        necessitatibus, <strong>ipsam beatae voluptates?</strong> Asperiores magni eius autem suscipit laborum illum
-        voluptatem
-        enim, reprehenderit est?</p>
-    <h1 class="my-title-2">testando especifidade</h1>
-    <p class="mytext-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam tenetur sequi molestiae
-        consectetur necessitatibus deserunt numquam sit beatae optio praesentium, voluptatum <strong>odit
-            facilis</strong>
-        impedit quis accusamus! Necessitatibus, cum recusandae.</p>
+    <!-- <div>
+        <p>Teste</p>
+    </div>
+    <ul>
+        <li>Testando combinadores</li>
+    </ul>
+    <div>Outro formato</div>
+    <section>
+        <div>
+            <ul>
+                <li>Outro marcador</li>
+            </ul>
+        </div>
+    </section> -->
+
+    <h1>titulo</h1>
+    <p>mais um paragrafo</p>
+    <button>enviar</button>
+    <p>outro paragrafo</p>
+    <p>outro paragrafo</p>
+    <p>outro paragrafo</p>
+    <p>outro paragrafo</p>
+    <p>outro paragrafo</p>
 </body>
 
 </html>
