aula 16 pseudo class pt2

--- a/pseudo-classes.html
+++ b/pseudo-classes.html
@@ -8,15 +8,31 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-<ul>
+    <form>
+
+        <input type="text"
+        name="number1"
+        id="number1"
+        disabled
+        placeholder="informe o numero 1">
+
+        <hr>
+        <input type="text"
+        name="number2"
+        id="number2"
+        placeholder="informe o numero 2">
+
+        <hr>
+        <button class="btn-submit">Enviar</button>
+    </form>
+</body>
+</html>
+<!-- <ul>
     <li>Marcador 1</li>
     <li>Marcador 2</li>
     <li>Marcador 3</li>
     <li>Marcador 4</li>
-</ul>
-
-</body>
-</html>
+</ul> -->
 
     <!-- <h1>Testando nth-of-child</h1>
     <p>
